Limit number of frames kept alive by VideoTrackRecorder

This CL addresses issues where we see increasing memory usage when
VideoTrackRecorder cannot keep up with the number of incoming frames.
- Limit the number of frames sent for encode to 30.
- Change duration when there is alpha encode to account for the double
load.

Bug: 735984
Test: Added unittest and tested HTML demo given in the bug.
Change-Id: I470422ca2538eb46cd24d36560f3d35b4ae28d06
Reviewed-on: https://chromium-review.googlesource.com/546996
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483421}
Former-commit-id: 894d66f402ebb97afe82052fa834612feffa8e28