content/renderer/media_recorder/video_track_recorder_unittest.cc
@@ -129,6 +129,10 @@ class VideoTrackRecorderTest
     return video_track_recorder_->encoder_.get() != nullptr;
   }
 
+  uint32_t NumFramesInEncode() {
+    return video_track_recorder_->encoder_->num_frames_in_encode_;
+  }
+
   // A ChildProcess and a MessageLoopForUI are both needed to fool the Tracks
   // and Sources below into believing they are on the right threads.
   const base::MessageLoopForUI message_loop_;
@@ -321,6 +325,26 @@ TEST_F(VideoTrackRecorderTest, HandlesOnError) {
       .WillOnce(RunClosure(quit_closure));
   Encode(video_frame, base::TimeTicks::Now());
   run_loop.Run();
+
+  Mock::VerifyAndClearExpectations(this);
+}
+
+// Inserts a frame for encode and makes sure that it is released properly and
+// NumFramesInEncode() is updated.
+TEST_F(VideoTrackRecorderTest, ReleasesFrame) {
+  InitializeRecorder(VideoTrackRecorder::CodecId::VP8);
+
+  const gfx::Size& frame_size = kTrackRecorderTestSize[0];
+  scoped_refptr<VideoFrame> video_frame =
+      VideoFrame::CreateBlackFrame(frame_size);
+
+  base::RunLoop run_loop;
+  video_frame->AddDestructionObserver(run_loop.QuitClosure());
+  EXPECT_CALL(*this, DoOnEncodedVideo(_, _, _, _, true)).Times(1);
+  Encode(video_frame, base::TimeTicks::Now());
+  video_frame = nullptr;
+  run_loop.Run();
+  EXPECT_EQ(0u, NumFramesInEncode());
 
   Mock::VerifyAndClearExpectations(this);
 }
